# Dino-Runner

./: .gitignore  Animate.cpp  Animate.h  Animate.hpp  CMakeLists.txt  Dino.cpp  Dino.h  Dino.hpp  DinoGame.cpp  DinoGame.h  DinoGame.hpp  Game.cpp  Game.h  README.md  compile.sh  main.cpp  run  sfml.cpp
